--- a/formObnData.html
+++ b/formObnData.html
@@ -8,9 +8,9 @@
     <script>
 
         function correrScript(){
-          var videoId = document.getElementById('inp_id').value;
+          var id_channel = document.getElementById('inp_id').value;
 
-          google.script.run.obtenerIdChannel(videoId);
+          google.script.run.myReport(id_channel);
         }
 
     </script>
