--- a/formObnDataChannel.html
+++ b/formObnDataChannel.html
@@ -10,7 +10,7 @@
         function correrScript(){
           var id_channel = document.getElementById('inp_id').value;
 
-          google.script.run.myReport(id_channel);
+          google.script.run.myReportChannel(id_channel);
         }
 
     </script>
